--- a/src/projects.css
+++ b/src/projects.css
@@ -2,7 +2,7 @@
     padding: 0;
     
   }
-.status{
-    margin: 0;
-    margin-top: 10px
-}
+  
+@media (max-width:500px){
+    .modal{  height: 90% !important ; }
+} 
